--- a/src/app/modules/dashboard/components/transactions/transactions.component.html
+++ b/src/app/modules/dashboard/components/transactions/transactions.component.html
@@ -29,12 +29,10 @@
       </div>
       <div fxFlex class="full-height">
         <app-button
-          [text]="'Add'"
-          [icon]="'plus'"
+          [text]="'View All'"
           [width]="150"
           [circular]="true"
-          class="centered add-transaction-button padding-b"
-          (click)="openModal('custom-modal-1')">
+          class="centered add-transaction-button padding-b">
         </app-button>
       </div>
     </div>
