--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -21,7 +21,10 @@
     <div class="navigation">
       <nav class="logo-wrapper padding" routerLink="/home">
         <div class="logo">
-          <p><span class="color-p">Savana</span><span class="color-s">Tech</span></p>
+          <p>
+            <span class="color-p">Savana</span>
+            <!--<span class="color-s">Tech</span>-->
+          </p>
         </div>
       </nav>
       <div class="elements" *ngIf="loggedIn$ | async">
