--- a/src/app/modules/dashboard/components/transaction-form/transaction-form.component.scss
+++ b/src/app/modules/dashboard/components/transaction-form/transaction-form.component.scss
@@ -34,10 +34,6 @@
     z-index: 99999;
     border-radius: 0 0 20px 20px;
 
-    .transaction-details {
-
-    }
-
     .transaction-amount {
       input {
         font-family: "DejaVu Sans Mono";
@@ -57,6 +53,14 @@
       }
 
     }
+  }
+
+
+  .transaction-actions {
+    position: absolute;
+    bottom: 0;
+    border-radius: 0 0 20px 20px;
+    height: 54px;
   }
 
 
