--- a/src/app/modules/shared/components/modal/modal.component.html
+++ b/src/app/modules/shared/components/modal/modal.component.html
@@ -1,9 +1,9 @@
-<div class="centered app-modal">
+<div class="centered app-modal" [@slideAnimation]="modalState"
+>
   <div class="app-modal-body"
        [ngClass]="{
           'raised': raised
         }"
-       [@slideAnimation]
   >
     <ng-content></ng-content>
   </div>
