--- a/src/styles.scss
+++ b/src/styles.scss
@@ -469,3 +469,17 @@ body.app-modal-open {
   /* body overflow is hidden to hide main scrollbar when modal window is open */
   //overflow: hidden;
 }
+
+.title-bar-underline {
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  bottom: 0;
+  content: '';
+  display: block;
+  height: 3px;
+  left: 0;
+  margin: 0 8px;
+  position: absolute;
+  right: 0;
+  background-color: #6EC4DB;
+}
