Almost complete homepage

--- a/src/app/modules/auth/pages/register/register.component.html
+++ b/src/app/modules/auth/pages/register/register.component.html
@@ -9,10 +9,9 @@
   <div class="padding-s main-body">
 
     <div class="headline">
-
       <div class="headline-title">
 
-        <p>Join AccountPlus</p>
+        <p>Join iSave</p>
 
       </div>
 
@@ -73,7 +72,7 @@
       </div>
       <div class="bg-white raised signup-benefits">
         <div class="padding-s bordered-b benefits-title">
-          <p>Why AccountPlus?</p>
+          <p>Why iSave?</p>
         </div>
         <div class="full-height benefit-items">
           <ul>
