--- a/src/app/modules/auth/components/register-form/register-form.component.html
+++ b/src/app/modules/auth/components/register-form/register-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="profileForm" novalidate class="signup-form">
+<form [formGroup]="profileForm" novalidate class="bg-white signup-form">
   <div class="form-control margin-ts">
     <label for="signup-email"
            *ngIf="formLabels.email && profileForm.get('email').value.length">
