--- a/src/styles.scss
+++ b/src/styles.scss
@@ -312,7 +312,7 @@ li {
   width: 100%;
   opacity: 1;
   background: white;
-  height: 70px;
+  height: 66px;
 }
 .content {
   position: relative;
@@ -415,8 +415,14 @@ li {
   text-align: left;
 }
 
+.headline {
+  font-size: 24px;
+}
+.headline-s {
+  font-size: 45px;
+}
 .chart {
-  border-top: 5px solid darkviolet;
+  border-top: 5px solid $primary;
 }
 
 /* MODAL STYLES
