Reduce unwanted spending

--- a/src/app/modules/home/components/intro/intro.component.html
+++ b/src/app/modules/home/components/intro/intro.component.html
@@ -73,7 +73,7 @@
   <div  fxLayout
         fxLayout.xs="column"
         fxLayoutGap="10px"
-        fxLayoutGap.xs="0" class="bg-white">
+        fxLayoutGap.xs="0" class="bg-white phone-bg">
     <div class="item full-height" fxFlex="10%"></div>
     <div class="item" fxFlex="35%">
       <div class="full-height centered">
@@ -106,7 +106,7 @@
     </div>
     <div class="item" fxFlex="50%">
       <div class="centered image margin-s padding-s">
-        <img class="centered" src="../../../../../assets/home/monthly-chart.png" alt="">
+        <!--<img class="centered" src="../../../../../assets/home/monthly-chart.png" alt="">-->
       </div>
     </div>
   </div>
