--- a/src/app/modules/home/components/intro/intro.component.scss
+++ b/src/app/modules/home/components/intro/intro.component.scss
@@ -44,4 +44,14 @@
       }
     }
   }
+
+  .phone-bg {
+    background: #f4f6f8;
+    background-image: url(https://images.unsplash.com/photo-1515054562254-30a1b0ebe227?ixlib=rb-1.2.1&auto=format&fit=crop&w=1267&q=80);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position:right;
+  }
+
 }
+
