--- a/src/app/modules/home/components/intro/intro.component.html
+++ b/src/app/modules/home/components/intro/intro.component.html
@@ -2,7 +2,7 @@
   <div  fxLayout
         fxLayout.xs="column"
         fxLayoutGap="10px"
-        fxLayoutGap.xs="0" class="bg-browny">
+        fxLayoutGap.xs="0" class="bg-white">
     <div class="item" fxFlex="10%"></div>
     <div class="item" fxFlex="40%">
       <div class="full-height centered">
@@ -34,13 +34,13 @@
         fxLayoutGap.xs="0"
         class="relative">
     <div class="item" fxFlex="10%"></div>
-    <div class="item saving" fxFlex="35%">
+    <div class="item saving" fxFlex="40%">
       <div class="centered full-height image">
         <img class="centered" src="../../../../../assets/home/piechart1.png" alt="">
       </div>
     </div>
     <div class="item" fxFlex="50%">
-      <div class="full-height margin-s">
+      <div class="full-height">
         <div class="margin-s padding-s benefits">
           <p class= "headline-s margin-s">Understand where your money goes.</p>
           <p class="margin-ls">Powerful visual tools help you categorize and understand your spending
@@ -75,7 +75,7 @@
         fxLayoutGap="10px"
         fxLayoutGap.xs="0" class="bg-white phone-bg">
     <div class="item full-height" fxFlex="10%"></div>
-    <div class="item" fxFlex="45%">
+    <div class="item" fxFlex="40%">
       <div class="full-height centered">
         <div class="margin-s padding-s benefits">
           <p class="headline-s margin-s">Reduce unwanted spending.</p>
@@ -104,10 +104,7 @@
         </div>
       </div>
     </div>
-    <div class="item" fxFlex="45%">
-      <div class="centered image margin-s padding-s">
-        <!--<img class="centered" src="../../../../../assets/home/monthly-chart.png" alt="">-->
-      </div>
+    <div class="item" fxFlex="50%" class="relative">
     </div>
   </div>
 </div>
