--- a/src/app/modules/home/components/intro/intro.component.scss
+++ b/src/app/modules/home/components/intro/intro.component.scss
@@ -22,7 +22,7 @@
     display: block;
 
     p, div {
-      color: black;
+      color: white;
     }
 
     .benefit-item {
@@ -46,10 +46,10 @@
 
   .phone-bg {
     background: #dad9dc;
-    background-image: url(https://images.unsplash.com/photo-1515054562254-30a1b0ebe227?ixlib=rb-1.2.1&auto=format&fit=crop&w=1267&q=80);
+    background-image: url(https://images.unsplash.com/photo-1543157797-c1bd4ff6928d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
     background-size: contain;
     background-repeat: no-repeat;
-    background-position:right;
+    background-position: right;
   }
 
   .bg-browny {
