--- a/src/app/modules/home/components/intro/intro.component.scss
+++ b/src/app/modules/home/components/intro/intro.component.scss
@@ -51,10 +51,11 @@
   .phone-bg {
     background: #1b190f;
     background-image: url(https://images.unsplash.com/photo-1543157797-c1bd4ff6928d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
+    //background-image: url(https://images.unsplash.com/photo-1423784346385-c1d4dac9893a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: right;
-    min-height: 400px;
+    min-height: 500px;
     div, p, span {
       color: white;
     }
