--- a/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -31,24 +31,15 @@
         <app-linechart [chart]="lineChart"></app-linechart>
       </div>
     </div>
-  </div>
 
-
-  <div class="row" >
-    <div class="col" *ngFor="let graph of barCharts">
-      <app-barchart [chart]="graph"></app-barchart>
+    <div fxLayout
+         fxLayout.xs="row"
+         fxLayoutAlign="space-between stretch"
+         fxLayoutGap="16px"
+         fxLayoutGap.xs="0" class="margin-ts">
+      <div fxFlex *ngFor="let graph of barCharts">
+        <app-barchart [chart]="graph"></app-barchart>
+      </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col">
-      <app-piechart [chart]="pieChart"></app-piechart>
-    </div>
-    <div class="col">
-      <app-linechart [chart]="lineChart"></app-linechart>
-    </div>
-    <!--<div class="col">-->
-    <!--<app-linechart [chart]="lineChart" [fill]="true"></app-linechart>-->
-    <!--</div>-->
-  </div>
-
 </div>
