Save for that dream vehicle

--- a/src/app/modules/home/components/intro/intro.component.html
+++ b/src/app/modules/home/components/intro/intro.component.html
@@ -108,6 +108,47 @@
       </div>
     </div>
   </div>
+  <div  fxLayout
+        fxLayout.xs="column"
+        fxLayoutGap="10px"
+        fxLayoutGap.xs="0" class="intro-set-targets">
+    <div class="item" fxFlex="10%"></div>
+    <div class="item" fxFlex="30%">
+      <!--<div class="centered image margin-s padding-s">-->
+      <!--&lt;!&ndash;<app-linechart [chart]="lineChart"></app-linechart>&ndash;&gt;-->
+      <!--</div>-->
+    </div>
+    <div class="item" fxFlex="60%">
+      <div class="full-height centered">
+        <div class="margin-s padding-s benefits">
+          <p class="headline-s margin-s">Save for that dream vehicle.</p>
+          <p class="margin-ls">Endeavor to achieve daily, monthly, yearly, and lifetime savings targets.</p>
+          <div class="benefit-item full-width padding-t">
+            <div class="benefit-item-heading margin-ls">
+              <fa name="line-chart" class="padding-rs padding-ts"></fa>
+              <p class="margin-s">Net Worth</p>
+            </div>
+            <p class="margin-ls">Keep a running record of the value of your assets.</p>
+          </div>
+          <div class="benefit-item full-width padding-t">
+            <div class="benefit-item-heading margin-ls">
+              <fa name="bell" class="padding-rs padding-ts"></fa>
+              <p class="margin-s">Real Time Alerts</p>
+            </div>
+            <p class="margin-ls">Get alerts on your mobile device when you exceed your budget.</p>
+          </div>
+          <div class="benefit-item full-width padding-t">
+            <div class="benefit-item-heading margin-ls">
+              <fa name="calendar" class="padding-rs padding-ts"></fa>
+              <p class="margin-s">Reminders</p>
+            </div>
+            <p class="margin-ls">Receive alerts for upcoming bills. Never get hit by a late fee again.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
 </div>
 
 
